[package]
name = "action-execution"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
action-definition = { path = "../action-definition" }
core = { path = "../core" }

eyre.workspace = true
futures-util.workspace = true
itertools.workspace = true
rquickjs.workspace = true
satint.workspace = true
serde.workspace = true
serde_plain.workspace = true
static-dispatch.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
parking_lot.workspace = true

[lints]
workspace = true
