[package]
name = "config"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
directories.workspace = true
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
tokio = { workspace = true, features = ["fs"] }
toml.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
versions = { workspace = true, features = ["serde"] }

[build-dependencies]
cfg_aliases.workspace = true

[lints]
workspace = true
