[package]
name = "core"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.actiona]
notification-aumid = "app.actiona.actiona-run"

[package.metadata.cargo-machete]
ignored = ["built", "cfg_aliases"]

[lib]
name = "actiona_core"

[target.'cfg(unix)'.dependencies]
ashpd = { workspace = true, features = ["screencast", "screenshot"] }
ksni.workspace = true
libwmctl.workspace = true
notify-rust = { workspace = true, features = ["z-with-tokio", "async", "images"] }
procfs.workspace = true
rustix = { workspace = true, features = ["process", "thread"] }
x11rb = { workspace = true, features = ["randr", "xinput", "allow-unsafe-code"] }
x11rb-async = { workspace = true, features = ["xinput", "randr", "shm", "extra-traits", "xkb", "allow-unsafe-code"] }
xkbcommon = { workspace = true, features = ["x11"] }
xkeysym.workspace = true
zbus.workspace = true

[target.'cfg(windows)'.dependencies]
interprocess = { workspace = true, features = ["tokio"] }
pe-parser.workspace = true
tray-icon.workspace = true
windows = { workspace = true, features = [
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_System_StationsAndDesktops",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "ApplicationModel_DataTransfer",
    "Storage_Streams",
] }
windows-result.workspace = true
winit.workspace = true
winrt-toast-reborn.workspace = true

[dependencies]
common = { path = "../common" }
extension = { path = "../extension" }
installer-tools = { path = "../installer-tools" }
macros = { path = "../macros" }
screenshot = { path = "../screenshot" }
types = { path = "../types", features = ["opencv", "imageproc"] } # TODO: remove "opencv" once we have moved the opencv code into the extension

ab_glyph.workspace = true
arboard.workspace = true
arc-swap.workspace = true
base64.workspace = true
bimap.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["clock", "std"] }
color-eyre.workspace = true
console.workspace = true
convert_case.workspace = true
derive-where.workspace = true
derive_more = { workspace = true, features = ["display", "deref", "deref_mut", "from", "into", "constructor"] }
directories.workspace = true
display-info.workspace = true
encoding_rs.workspace = true
enigo.workspace = true
flate2.workspace = true
futures.workspace = true
http-body.workspace = true
http-body-util.workspace = true
human-units = { workspace = true, features = ["si-units"] }
humansize.workspace = true
humantime.workspace = true
image = { workspace = true, features = ["png", "jpeg", "bmp", "gif", "tga", "tiff", "webp"] }
imageproc = { workspace = true, features = ["text"] }
indexmap = { workspace = true, features = ["serde"] }
indicatif.workspace = true
infer.workspace = true
ipnet.workspace = true
itertools.workspace = true
mime.workspace = true
mime_guess.workspace = true
noiselib.workspace = true
notzero.workspace = true
num-traits.workspace = true
open.workspace = true
opencv = { workspace = true, features = ["clang-runtime", "imgproc"] }
parking_lot.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["native-tls", "stream", "multipart", "json", "form", "query"] }
rfd.workspace = true
rodio = { workspace = true, features = ["playback", "flac", "mp3", "mp4", "vorbis", "wav", "tracing"] }
rquickjs = { workspace = true, features = ["macro", "futures", "parallel", "indexmap"] }
rquickjs-serde.workspace = true
rustydialogs.workspace = true
satint = { workspace = true, features = ["rand"] }
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
slotmap.workspace = true
strum = { workspace = true, features = ["derive"] }
swc_common = { workspace = true, features = ["tty-emitter", "sourcemap"] }
swc_ecma_ast.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_transforms_base.workspace = true
swc_ecma_transforms_typescript.workspace = true
swc_sourcemap.workspace = true
sysinfo.workspace = true
system_shutdown.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros", "time", "process", "sync", "fs", "io-util"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
tween.workspace = true
unicode-segmentation.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4"] }
wildmatch.workspace = true

[build-dependencies]
built.workspace = true
cfg_aliases.workspace = true
toml.workspace = true

[dev-dependencies]
base64.workspace = true
console-subscriber.workspace = true
criterion.workspace = true
httptest.workspace = true
libtest-mimic-collect.workspace = true
rstest.workspace = true
serial_test.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true

[lints]
workspace = true

[[bench]]
name = "find_image"
harness = false
