[package]
name = "doc-generator"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["built"]

[dependencies]
actiona_core = { package = "core", path = "../core" }

clap.workspace = true
color-eyre.workspace = true
convert_case.workspace = true
env_logger.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
regex.workspace = true
rustdoc-types.workspace = true
serde_json.workspace = true
strum.workspace = true

[build-dependencies]
built.workspace = true
