[package]
name = "doc-generator"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
ignored = ["built"]

[dependencies]
actiona_core = { package = "core", path = "../core" }

clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
convert_case.workspace = true
env_logger.workspace = true
itertools.workspace = true
log.workspace = true
regex.workspace = true
rustdoc-types.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }

[build-dependencies]
built.workspace = true

[lints]
workspace = true
