[package]
name = "e2e"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
publish = false

[lib]
name = "e2e"

[dependencies]

[dev-dependencies]
assert_cmd.workspace = true
httptest.workspace = true
tempfile.workspace = true
