[package]
name = "file-format"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
action-definition = { path = "../action-definition" }
types = { path = "../types" }

base64.workspace = true
image = { workspace = true, features = ["png", "webp"] }
indexmap = { workspace = true, features = ["rayon", "serde"] }
mime.workspace = true
postcard = { workspace = true, features = ["use-std"] }
rayon.workspace = true
rodio.workspace = true
ruopus.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }
tokio-util = { workspace = true, features = ["io", "rt"] }
uuid = { workspace = true, features = ["serde"] }
zstd.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
