[package]
name = "run"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
default-run = "actiona-run"

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[[bin]]
name = "actiona-run"
path = "src/bin/actiona-run.rs"

[[bin]]
name = "actiona-runw"
path = "src/windows/actiona-runw.rs"
required-features = ["windows-bin"]

[features]
default = []
windows-bin = []

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Wdk_System_SystemServices",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
] }
winrt-toast-reborn.workspace = true

[dependencies]
actiona_core = { package = "core", path = "../core" }
common = { path = "../common" }
config = { path = "../config" }
installer-tools = { path = "../installer-tools" }
updater = { path = "../updater" }

clap = { workspace = true, features = ["env"] }
clap_complete.workspace = true
color-eyre.workspace = true
console.workspace = true
crash-handler.workspace = true
dialoguer.workspace = true
directories.workspace = true
enigo.workspace = true
flate2.workspace = true
humantime.workspace = true
indicatif.workspace = true
rfd.workspace = true
rquickjs.workspace = true
rustyline.workspace = true
sadness-generator.workspace = true
serde_json.workspace = true
shell-words.workspace = true
strum.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
two-face.workspace = true
url.workspace = true
versions.workspace = true

[build-dependencies]
build-support = { path = "../build-support" }

built.workspace = true
cfg_aliases.workspace = true
clap = { workspace = true, features = ["env"] }
clap_complete.workspace = true
embed-resource.workspace = true
flate2.workspace = true
strum.workspace = true

[dev-dependencies]
tempfile.workspace = true
