[package]
name = "screenshot"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[target.'cfg(unix)'.dependencies]
memfd.workspace = true
memmap2.workspace = true
x11rb-async.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dependencies]
types = { path = "../types" }

color-eyre.workspace = true
rayon.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
satint.workspace = true
