[package]
name = "screenshot"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[target.'cfg(unix)'.dependencies]
memfd.workspace = true
memmap2.workspace = true
x11rb-async = { workspace = true, features = ["shm"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[dependencies]
types = { path = "../types" }

color-eyre.workspace = true
rayon.workspace = true
satint.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[lints]
workspace = true
