[package]
name = "selection-tool"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[target.'cfg(not(windows))'.dependencies]
x11rb.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[package.metadata.cargo-machete]
ignored = ["common"]

[dependencies]
common = { path = "../common" }

bytemuck.workspace = true
clap.workspace = true
color-eyre.workspace = true
pixels.workspace = true
serde_json.workspace = true
winit.workspace = true

[build-dependencies]
build-support = { path = "../build-support" }

built.workspace = true
embed-resource.workspace = true
