[package]
name = "types"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[features]
default = []
opencv = ["dep:opencv"]
imageproc = ["dep:imageproc"]

[dependencies]
color-eyre.workspace = true
derive_more = { workspace = true, features = ["add", "add_assign", "mul", "mul_assign", "not", "deref", "deref_mut", "from", "into", "constructor"] }
image.workspace = true
imageproc = { workspace = true, optional = true }
notzero.workspace = true
opencv = { workspace = true, optional = true }
rand.workspace = true
satint = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
