[package]
name = "updater"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
config = { path = "../config" }

color-eyre.workspace = true
indexmap.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
sys-locale.workspace = true
sysinfo.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
versions.workspace = true

[build-dependencies]
cfg_aliases.workspace = true
