[package]
name = "updater"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
config = { path = "../config" }

color-eyre.workspace = true
indexmap = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
sys-locale.workspace = true
sysinfo.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
versions.workspace = true

[build-dependencies]
cfg_aliases.workspace = true

[lints]
workspace = true
