[package]
name = "xtask"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
installer-tools = { path = "../installer-tools" }
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
versions.workspace = true
zip.workspace = true
