[package]
name = "extension-selection"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[target.'cfg(not(windows))'.dependencies]
x11rb.workspace = true

[[bin]]
name = "extension-selection"
path = "src/main.rs"

[dependencies]
common = { path = "../../common" }
extension = { path = "../../extension" }
screenshot = { path = "../../screenshot" }
types = { path = "../../types" }

bytemuck.workspace = true
color-eyre.workspace = true
pixels.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util.workspace = true
winit.workspace = true
satint.workspace = true

[build-dependencies]
build-support = { path = "../../build-support" }

built.workspace = true
embed-resource.workspace = true
