[package]
name = "extension-selection"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[target.'cfg(not(windows))'.dependencies]
x11rb.workspace = true

[[bin]]
name = "extension-selection"
path = "src/main.rs"

[dependencies]
common = { path = "../../common" }
extension = { path = "../../extension" }
screenshot = { path = "../../screenshot" }
types = { path = "../../types" }

bytemuck = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
pixels.workspace = true
satint.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util.workspace = true
winit = { workspace = true, features = ["x11", "rwh_06"] }

[build-dependencies]
build-support = { path = "../../build-support" }

built.workspace = true
embed-resource.workspace = true

[lints]
workspace = true
